SLA-2708 Refactoring after CR

--- a/Bundles/CustomerSubscriptionPage/src/SprykerDemo/Yves/CustomerSubscriptionPage/Theme/default/components/molecules/subscription-table/subscription-table.twig
+++ b/Bundles/CustomerSubscriptionPage/src/SprykerDemo/Yves/CustomerSubscriptionPage/Theme/default/components/molecules/subscription-table/subscription-table.twig
@@ -1,4 +1,4 @@
-{% extends molecule('order-table', '@SprykerShop:CustomerPage') %}
+{% extends molecule('order-table', 'CustomerPage') %}
 
 {% define data = {
     requestUri: app.request.requestUri,
