SLA-2562: fix for formatter

--- a/Bundles/CustomerRepresentativeWidget/src/SprykerDemo/Yves/CustomerRepresentativeWidget/Theme/default/components/molecules/customer-representative-widget-tile/customer-representative-widget-tile.scss
+++ b/Bundles/CustomerRepresentativeWidget/src/SprykerDemo/Yves/CustomerRepresentativeWidget/Theme/default/components/molecules/customer-representative-widget-tile/customer-representative-widget-tile.scss
@@ -1,6 +1,8 @@
 $setting-color-title: #2f2f2f;
 
-@mixin customer-representative-widget-customer-representative-widget-tile($name: '.customer-representative-widget-tile') {
+@mixin customer-representative-widget-customer-representative-widget-tile(
+    $name: '.customer-representative-widget-tile'
+) {
     #{$name} {
         display: flex;
         flex-flow: row nowrap;
