Fixed dependency issue with customer representative wirdget

--- a/Bundles/CustomerRepresentativeWidget/src/SprykerDemo/Yves/CustomerRepresentativeWidget/Theme/default/views/customer-representative-widget/customer-representative-widget.twig
+++ b/Bundles/CustomerRepresentativeWidget/src/SprykerDemo/Yves/CustomerRepresentativeWidget/Theme/default/views/customer-representative-widget/customer-representative-widget.twig
@@ -5,7 +5,7 @@
 } %}
 
 {% block template %}
-    {% embed molecule('customer-representative-widget-tile', '@SprykerDemo:CustomerRepresentativeWidget') with {
+    {% embed molecule('customer-representative-widget-tile', 'CustomerRepresentativeWidget') with {
         data: {
             icon: 'customer-representative',
             title: 'customer.representative.services.title' | trans,
