--- a/Bundles/CompanyRepresentativeWidget/src/SprykerDemo/Yves/CompanyRepresentativeWidget/Theme/default/components/molecules/company-representative-widget-tile/company-representative-widget-tile.scss
+++ b/Bundles/CompanyRepresentativeWidget/src/SprykerDemo/Yves/CompanyRepresentativeWidget/Theme/default/components/molecules/company-representative-widget-tile/company-representative-widget-tile.scss
@@ -1,7 +1,7 @@
 $setting-color-title: #2f2f2f;
 
 @mixin company-representative-widget-customer-representative-widget-tile(
-    $name: '.company-representative-widget-tile'
+    $name: ".company-representative-widget-tile"
 ) {
     #{$name} {
         display: flex;
