SLA-2562 Fix CI

--- a/Bundles/CompanyRepresentativeWidget/src/SprykerDemo/Yves/CompanyRepresentativeWidget/Theme/default/components/molecules/company-representative-widget-tile/company-representative-widget-tile.scss
+++ b/Bundles/CompanyRepresentativeWidget/src/SprykerDemo/Yves/CompanyRepresentativeWidget/Theme/default/components/molecules/company-representative-widget-tile/company-representative-widget-tile.scss
@@ -1,8 +1,6 @@
 $setting-color-title: #2f2f2f;
 
-@mixin company-representative-widget-company-representative-widget-tile(
-    $name: ".company-representative-widget-tile"
-) {
+@mixin company-representative-widget-company-representative-widget-tile($name: '.company-representative-widget-tile') {
     #{$name} {
         display: flex;
         flex-flow: row nowrap;
