SLA-2563 Fixed frontend code style

--- a/Bundles/MerchantReviewMerchantPortalGui/src/SprykerDemo/Zed/MerchantReviewMerchantPortalGui/Presentation/Components/app/merchant-review-merchant-portal/merchant-review-merchant-portal.component.html
+++ b/Bundles/MerchantReviewMerchantPortalGui/src/SprykerDemo/Zed/MerchantReviewMerchantPortalGui/Presentation/Components/app/merchant-review-merchant-portal/merchant-review-merchant-portal.component.html
@@ -2,4 +2,7 @@
     <ng-content select="[title]"></ng-content>
 </spy-headline>
 
-<mp-merchant-reviews-merchant-portal-table [tableId]="tableId" [config]="tableConfig"></mp-merchant-reviews-merchant-portal-table>
+<mp-merchant-reviews-merchant-portal-table
+    [tableId]="tableId"
+    [config]="tableConfig"
+></mp-merchant-reviews-merchant-portal-table>
