--- a/Bundles/ImportProcessSpreadsheetGui/src/SprykerDemo/Zed/ImportProcessSpreadsheetGui/Presentation/Index/select-sheet.twig
+++ b/Bundles/ImportProcessSpreadsheetGui/src/SprykerDemo/Zed/ImportProcessSpreadsheetGui/Presentation/Index/select-sheet.twig
@@ -1,15 +1,15 @@
 {% extends '@Gui/Layout/layout.twig' %}
 
-{% set widget_title = 'product_upload.spreadsheet.select_importer_page_headline' | trans %}
+{% set widget_title = 'import_process.spreadsheet.select_importer_page_headline' | trans %}
 {% block section_title %}{{ widget_title }}{% endblock %}
 
 {% block content %}
-    {% embed '@Gui/Partials/widget.twig' with { widget_title: 'product_upload.spreadsheet.select_importer_box_headline' | trans } %}
+    {% embed '@Gui/Partials/widget.twig' with { widget_title: 'import_process.spreadsheet.select_importer_box_headline' | trans } %}
         {% block widget_content %}
             <div class="gray-bg wrapper-content">
-                <h4>{{ 'product_upload.spreadsheet.select_importer_description_headline' | trans }}</h4>
+                <h4>{{ 'import_process.spreadsheet.select_importer_description_headline' | trans }}</h4>
 
-                <p>{{ 'product_upload.spreadsheet.select_importer_description_text' | trans }}</p>
+                <p>{{ 'import_process.spreadsheet.select_importer_description_text' | trans }}</p>
             </div>
             {% block form %}
                 {{ form_start(form) }}
