--- a/Bundles/ImportProcessGui/src/SprykerDemo/Zed/ImportProcessGui/Presentation/Index/view-status.twig
+++ b/Bundles/ImportProcessGui/src/SprykerDemo/Zed/ImportProcessGui/Presentation/Index/view-status.twig
@@ -9,14 +9,14 @@
                 <div class="alert alert-success">
                     <i class="far fa-check-circle alert__icon"></i>
                     <div class="alert__text">
-                        {{ sourceReport.importType }}: imported {{ sourceReport.importedDataSetCount }} out of {{ sourceReport.expectedImportableDataSetCount }}
+                        {{ sourceReport.importType ~ ': imported ' ~ sourceReport.importedDataSetCount ~ ' out of ' ~ sourceReport.expectedImportableDataSetCount | trans }}
                     </div>
                 </div>
             {% else %}
                 <div class="alert alert-danger">
                     <i class="fas fa-ban alert__icon"></i>
                     <div class="alert__text">
-                        {{ sourceReport.importType }}: Import failed
+                        {{ sourceReport.importType ~ ': Import failed' | trans }}
                     </div>
                 </div>
             {% endif %}
